feat(media): Implemented delete media endpoints